Reduced image load size

--- a/templates/content.html
+++ b/templates/content.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 {% if key_stage == 1 or current_user.role == 'teacher' %}
-    <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+    <div class="content-card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-1">
-          <img src="https://www.worldlandtrust.org/wp-content/uploads/2017/10/Santa-cruz-forest-banner.jpg" class="card-img-top" alt="A forest">
+          <img src="https://i.pinimg.com/originals/ef/48/d2/ef48d217dc8e23a49277afc4dcf403c3.png" class="card-img-top" alt="A forest">
           <div class="card-body" style="font-family: 'Comic Sans MS', serif">
             <h5 class="card-title">KS1 - What do people do in forests?</h5>
             <p class="card-text">
@@ -28,11 +28,11 @@
         </div>
 </div>
 {% endif %}
-    <!--------------------->
+
 {% if key_stage == 1 or current_user.role == 'teacher' %}
-    <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+    <div class="content-card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-1">
-          <img src="https://belfasthills.org/wp-content/uploads/2015/02/Shallow-Tropical-Sea-Banner.jpg" class="card-img-top" alt="The sea">
+          <img src="https://international-adviser.com/wp-content/uploads/sites/3/2019/12/Waves-crashing-hit.jpg" class="card-img-top" alt="The sea">
           <div class="card-body" style="font-family: 'Comic Sans MS', serif">
             <h5 class="card-title">KS1 - The seas</h5>
             <p class="card-text">
@@ -48,11 +48,11 @@
         </div>
 </div>
 {% endif %}
-        <!--------------------->
+
 {% if key_stage == 1 or current_user.role == 'teacher' %}
-    <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+    <div class="content-card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-1">
-          <img src="https://i.pinimg.com/originals/73/33/99/7333998964bec5d35202efcbe4aceab4.jpg" class="card-img-top"
+          <img src="https://sites.psu.edu/aspsy/files/2020/02/reuse-recycle.jpg" class="card-img-top"
                alt="Banner saying reduce, reuse, recycle">
           <div class="card-body" style="font-family: 'Comic Sans MS', serif">
             <h5 class="card-title">KS1 - Be a recycle ranger!</h5>
@@ -66,9 +66,9 @@
         </div>
 </div>
 {% endif %}
-    <!--------------------->
+
 {% if key_stage == 2 or current_user.role == 'teacher' %}
-    <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+    <div class="content-card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-1">
           <img src="https://www.sparklebox.co.uk/wp-content/uploads/1-1080.jpg" class="card-img-top" alt="
 Banner saying 'climate change' with a sun, clouds and thermometer behind it.">
@@ -101,9 +101,9 @@ Banner saying 'climate change' with a sun, clouds and thermometer behind it.">
         </div>
 </div>
     {% endif %}
-    <!--------------------->
+
 {% if key_stage == 2 or current_user.role == 'teacher' %}
-    <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+    <div class="content-card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-1">
           <img src="https://www.wagggs.org/documents/589/WAGGGS_COP_21_Banner_Girls_for_a_Greener_Future_without_text.jpg" class="card-img-top" alt="
 A melting planet">
